--- a/public/login.html
+++ b/public/login.html
@@ -22,12 +22,21 @@
     </nav>
 </header>
 <main id="login">
+    <ul id="slide-out" class="side-nav">
+      <li><a class="subheader"><i class="material-icons">chat</i>Chats</a></li>
+      <li><div class="divider"></div></li>
+          <chat-item v-for="chatUid in chatUids" v-bind:id="chatUid"></chat-item>
+      <!-- <chat-item v-for="chatId in chatIds" v-bind:chatId="chatId"></chat-item> -->
+      <button class="btn" @click="createChat()">Create Chat</button>
+    </ul>
+     <button data-activates="slide-out" class="button-collapse right"><i class="material-icons">chat</i>Show chats</button>
     <div class="row" v-if="joined">
         <div class="col s12">
             <div class="card horizontal">
                 <div id="chat-messages" class="card-content" v-html="chatContent">
                 </div>
             </div>
+            <input type="text" v-if="joined" placeholder="Add user" v-model="addedUser" @keyup.enter="send">
         </div>
     </div>
     <div class="row" v-if="joined">
@@ -68,5 +77,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/md5.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 <script src="/login.js"></script>
+<script>
+$('.button-collapse').sideNav({
+      menuWidth: 300, // Default is 300
+      edge: 'right', // Choose the horizontal origin
+      closeOnClick: true, // Closes side-nav on <a> clicks, useful for Angular/Meteor
+      draggable: true // Choose whether you can drag to open on touch screens
+    }
+  );
+</script>
 </body>
 </html>
