--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <div class="nav-wrapper">
             <a href="/" class="brand-logo right">Simple Chat</a>
             <ul id="nav-mobile" class="left">
-                <li><a href="login">Login</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </div>
 
